# RH6-ethercat

./: README.md
cpp/: LATENCY_MONITORING_GUIDE.md  RUNNING_GUIDE.md  canset.sh  check_ethercat_lib.sh  ros2build.sh
cpp/rh6_cmd/: CMakeLists.txt  package.xml
cpp/rh6_cmd/msg/: Rh6Cmd.msg
cpp/rh6_cmd/srv/: Rh6fk.srv  Rh6ik.srv
cpp/rh6_ctrl/: CMakeLists.txt  package.xml
cpp/rh6_ctrl/include/: can_socket.h  rh6_ctrl.hpp  rh6_test.hpp  ryhandlib_port.h
cpp/rh6_ctrl/launch/: BothHands.launch.py
cpp/rh6_ctrl/src/: can_socket.c  rh6_ctrl.cpp  rh6_kinematics.cpp  rh6_test.cpp  ryhandlib_port.c
cpp/rh6_ecat/: CMakeLists.txt  ETHERCAT_SINE_WAVE_IMPLEMENTATION.md  README.md  USAGE_GUIDE.md  package.xml
cpp/rh6_ecat/examples/: compatibility_test.cpp  ethercat_sine_wave_test.cpp  hand_mode_control.cpp  shm_initialization_example.cpp
cpp/rh6_ecat/include/rh6_ecat/: RyHandLib.h  communication_bridge.hpp  ethercat_bridge.hpp  ethercat_slave_config.h  ros_hand_interface.hpp  ryhand_types.hpp  shared_data.h  shm_utils.h  shm_utils_cpp.hpp
cpp/rh6_ecat/launch/: hand_ctrl.launch.py  hand_system_bridge.launch.py
cpp/rh6_ecat/params/: hand_params.yaml
cpp/rh6_ecat/scripts/: start_bridge_system.sh  start_sine_wave_test.sh  stop_bridge_system.sh
cpp/rh6_ecat/src/: communication_bridge_factory.cpp  ethercat_bridge.cpp  ethercat_bridge_stub.cpp  ethercat_slave_config.c  ethercat_slave_config.cpp  hand_system_bridge.cpp  ros_hand_interface.cpp  shm_utils.c
cpp/rh6_ecat/srv/: SetHandMode.srv
cpp/rh6_msg/: CMakeLists.txt  package.xml
cpp/rh6_msg/msg/: Rh6Msg.msg
cpp/scripts/: export_latency_stats.cpp  monitor_latency.sh
