<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rh6_ctrl</name>
  <version>0.0.1</version>
  <description>ROS2 package rh6</description>
  <maintainer email="1109920475@qq.com">zhang</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rh6_msg</depend>
  <depend>rh6_cmd</depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pinocchio</depend>
  <depend>urdfdom</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
